# Stretchia

./: .gitignore  CLAUDE.md  LICENSE  README.md  StretchReminder_TZ.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.html  main.ts  settings.css  settings.html  settings.ts  stats.css  stats.html  stats.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: afk.rs  db.rs  lib.rs  timer.rs  tray.rs
